--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Protiva Bintae Ibrahim Portfolio</title>
+    <title>Protiva's Portfolio</title>
     <style>
         * {
             margin: 0;
@@ -91,13 +91,14 @@
             .btn {
                 margin: 10px 0;
                 width: 200px;
+                border-radius: 20px;
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="https://via.placeholder.com/200" alt="Protiva Bintae Ibrahim" class="profile-image">
+        <img src="https://via.placeholder.com/200" alt="Protiva Bintae Ibrahim" class="9C90EAE6-EFD2-4FEA-9994-96FA2B2BC15F.jpeg">
         
         <h1 class="name">Protiva Bintae Ibrahim</h1>
         <p class="title">Project & Workshop Secretary | ISTARC</p>
