--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         .name {
             font-size: 2.5rem;
-            color: blue;
+            color: pink;
             margin-bottom: 10px;
         }
 
@@ -98,7 +98,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://via.placeholder.com/200" alt="Protiva Bintae Ibrahim" class="9C90EAE6-EFD2-4FEA-9994-96FA2B2BC15F.jpeg">
+        <img src="9C90EAE6-EFD2-4FEA-9994-96FA2B2BC15F.jpeg" alt="Protiva Bintae Ibrahim" class="ami protiva, but protiva nai">
         
         <h1 class="name">Protiva Bintae Ibrahim</h1>
         <p class="title">Project & Workshop Secretary | ISTARC</p>
@@ -106,7 +106,7 @@
         <div class="button-container">
             <a href="#" class="btn btn-blue">About Me</a>
             <a href="#" class="btn btn-pink">My Work</a>
-            <a href="#" class="btn btn-black">Contact</a>
+            <a href="https://www.facebook.com/share/18UtsK1y9h/?mibextid=LQQJ4d" target= "blank" class="btn btn-black">Contact</a>
         </div>
     </div>
 </body>
