--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="9C90EAE6-EFD2-4FEA-9994-96FA2B2BC15F.jpeg" alt="Protiva Bintae Ibrahim" class="ami protiva, but protiva nai">
+        <img src="9C90EAE6-EFD2-4FEA-9994-96FA2B2BC15F.jpeg" alt="Protiva Bintae Ibrahim" class="profile-image">
         
         <h1 class="name">Protiva Bintae Ibrahim</h1>
         <p class="title">Project & Workshop Secretary | ISTARC</p>
